# glkvm-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
docs/plans/: 2025-11-27-glkvm-mcp-design.md  2025-11-27-glkvm-mcp-implementation.md
kvm/: hid_server.py
scripts/: generate_certs.sh  kvm-hid-server.py  setup_kvm.sh
src/glkvm_mcp/: __init__.py  client.py  config.py  ocr.py  server.py  tools.py
src/glkvm_mcp/sdk/: __init__.py  exceptions.py  kvm.py  module.py  screenshot.py
tests/: __init__.py  test_client.py  test_config.py  test_exceptions.py  test_kvm.py  test_module.py  test_ocr.py  test_screenshot.py  test_server.py  test_tools.py
