[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glkvm-mcp"
version = "0.1.0"
description = "MCP server for controlling KVM devices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dave King", email = "dave@davewking.com"}
]
dependencies = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
glkvm-mcp = "glkvm_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["glkvm_mcp*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else (can reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["glkvm_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
